# english_class

./: DEPLOY.md  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  需求.txt
backend/: CMakeLists.txt  build.bat  fetch_vocabulary.py  server.cpp  server_out.txt
backend/data/: comments.csv  contributions.csv  custom_bank_words.csv  custom_banks.csv  dictionary.csv  friends.csv  game_records.csv  likes.csv  mistakes.csv  posts.csv  records.csv  system_config.json  users.csv  words.csv
backend/src/: main.cpp
backend/src/models/: user.hpp  word.hpp
backend/src/repositories/: record-repository.hpp  user-repository.hpp  word-repository.hpp
backend/src/services/: auth-service.hpp  game-service.hpp  test-service.hpp  word-service.hpp
backend/src/utils/: csv-helper.hpp
data/: dictionary.csv  records.csv  users.csv  words.csv
docs/: API.md
docs/csv_templates/: game_records_template.csv  records_template.csv  users_template.csv  words_template.csv
src/: App.tsx  constants.ts  index.css  types.ts
src/components/: Navigation.tsx
src/lib/: api.ts
src/pages/: AdminCommunity.tsx  AdminConfig.tsx  AdminDictionary.tsx  AdminGameRecords.tsx  AdminReview.tsx  CommunityPage.tsx  ContributePage.tsx  DashboardPage.tsx  DictionaryPage.tsx  EntryPage.tsx  GamePage.tsx  LoginPage.tsx  SettingsPage.tsx  TestPage.tsx  UsersPage.tsx
